--- a/sw_stack.tex
+++ b/sw_stack.tex
@@ -13,35 +13,46 @@ PCs right now.
 It all starts with the application. On PC, all communication between an app and
 the GPU is mediated by the graphics API; apps may occasionally get direct
 access to memory that's GPU-addressable (such as Vertex Buffers or Textures),
-but on PC they can't directly generate native GPU commands \footnote{Not
+but on PC they can't directly generate native GPU commands\footnote{Not
 officially, anyway; since the UMD writes command buffers and runs in user mode,
 an app could conceivably figure out where the UMD stores its current write
 pointer and insert GPU commands manually, but that's not exactly supported or
-recommended behavior.} --- all that has to go through the API and the driver.
+recommended behavior.}---all that has to go through the API and the driver.
 
 The API is the recipient of the app's resource creation, state-setting, and draw
 calls. The API runtime keeps track of the current state your app has set,
 validates parameters and does other error and consistency checking, manages
 user-visible resources, and may or may not validate shader code and shader
 linkage (it does in D3D, while in OpenGL this is handled at the driver level).
-It can also merge batches if possible. It then packages it all up nicely and
-hands it over to the graphics driver---more precisely, the user-mode driver.
+It can also merge batches if possible and remove redundant state changes. It 
+then packages it all up nicely and hands it over to the graphics driver---more 
+precisely, the user-mode driver.
 
 \section{The User-Mode Driver (UMD)}
 
-This is where most of the ``magic'' on the CPU side happens. If your app
-crashes because of some API call you did, it will usually be in here :). It's
-called ``nvd3dum.dll'' (NVidia) or ``atiumd*.dll'' (AMD). As the name suggests,
-this is user-mode code; it's running in the same context and address space as
-your app (and the API runtime) and has no elevated privileges whatsoever. It
-implements a lower-level API (the DDI~\citep{umd-ddi}) that is called by D3D;
-this API is fairly similar to the one you're seeing on the surface, but a bit
+This is where most of the ``magic'' on the CPU side happens. As the name 
+suggests, it is user-mode code; it's running in the same context and address 
+space as the app (and the API runtime) and has no elevated privileges 
+whatsoever. It contains most of the complicated bits of a graphics driver, 
+which also means that if an app crashes the driver, it will probably happen in 
+there.  That's a good thing: since it's all user-mode code running in the app's 
+address space, it may take down the running program, but it's unlikely to 
+affect other processes---contrast previous models, where a driver problem could 
+(and frequently would) cause a blue screen and crash the whole system.
+The UMD is just a normal DLL. It's called ``nvd3dum.dll'' (Nvidia) or 
+``atiumd*.dll'' (AMD).  It implements a lower-level API, the 
+DDI~\citep{umd-ddi}, that is called by D3D; this API is fairly similar to the 
+one you're seeing on the surface, but a bit
 more explicit about things like memory and state management.
 
 This module is where things like shader compilation happen. D3D passes a
-pre-validated shader token stream to the UMD---i.e. it's already checked that
-the code is valid in the sense of being syntactically correct and obeying D3D
-constraints (using the right types, not using more textures/samplers than
+pre-validated shader token stream\footnote{For the curious, the format of 
+D3D9-level Shader bytecode, i.e.\@ versions up to 3.0, is described in the 
+regular WDDM docs that are a part of the WDK; documentation for later bytecode 
+versions is only in the (non-public) WGF specs.} to the UMD---i.e.\@ it's 
+already checked that the code is valid in the sense of being syntactically 
+correct and obeying D3D constraints (using the right types, not using more 
+textures/samplers than
 available, not exceeding the number of available constant buffers, stuff like
 that). This is compiled from HLSL code and usually has quite a number of
 high-level optimizations (various loop optimizations, dead-code elimination,
@@ -58,158 +69,216 @@ optimizations already definitely helps), but there's still lots of low-level
 details (such as HW resource limits and scheduling constraints) that D3D
 neither knows nor cares about, so this is not a trivial process.
 
-And of course, if your app is a well-known game, programmers at NV/AMD have
-probably looked at your shaders and wrote hand-optimized replacements for their
-hardware - though they better produce the same results lest there be a scandal
-:). These shaders get detected and substituted by the UMD too. You're welcome.
+For games and other well-known apps, programmers at Nvidia/AMD tend to look at 
+the shader code and write hand-optimized versions for whatever graphics 
+architecture is current at the time, because driver compilers aren't perfect.  
+This well-known app detection and shader substitution happens in the UMD too.  
+Drivers also used to do somewhat sleazier things like using ``optimized'' 
+shaders in benchmarks that used cheaper texture filtering or using simpler 
+shaders for far-away objects, all to get better benchmark scores. Luckily we 
+seem to have moved past that now (or at least the cheating has gotten less 
+obvious).
 
-More fun: Some of the API state may actually end up being compiled into the
-shader - to give an example, relatively exotic (or at least infrequently used)
-features such as texture borders are probably not implemented in the texture
-sampler, but emulated with extra code in the shader (or just not supported at
-all). This means that there's sometimes multiple versions of the same shader
-floating around, for different combinations of API states.
+To make matters more interesting, some of the API state may actually end up 
+being compiled into the shader. To give an example, relatively exotic (or at 
+least infrequently used) features such as texture borders are probably not 
+implemented in full generality the texture sampler, but emulated with extra
+code in the shader (or just not supported at all). This means that there's 
+sometimes multiple versions of the same shader floating around, for different 
+combinations of API states. And while D3D presents the fiction of completely 
+independent Vertex, Pixel, Geometry etc. shaders, the driver may decide to 
+compile e.g.\@ Vertex and Geometry shaders together to minimize the amount of 
+glue code between them.
 
 Incidentally, this is also the reason why you'll often see a delay the first
 time you use a new shader or resource; a lot of the creation/compilation work
 is deferred by the driver and only executed when it's actually necessary (you
 wouldn't believe how much unused crap some apps create!). Graphics programmers
-know the other side of the story - if you want to make sure something is
+know the other side of the story---if you want to make sure something is
 actually created (as opposed to just having memory reserved), you need to issue
-a dummy draw call that uses it to "warm it up". Ugly and annoying, but this has
-been the case since I first started using 3D hardware in 1999 - meaning, it's
-pretty much a fact of life by this point, so get used to it. :)
+a dummy draw call that uses it to ``warm it up''. That's the price you have to 
+pay for this kind of lazy evaluation.
 
-Anyway, moving on. The UMD also gets to deal with fun stuff like all the D3D9
-``legacy'' shader versions and the fixed function pipeline - yes, all of that
-will get faithfully passed through by D3D. The 3.0 shader profile ain't that
-bad (it's quite reasonable in fact), but 2.0 is crufty and the various 1.x
+The UMD also gets to deal with fun things like all the D3D9 ``legacy'' shader 
+versions and the fixed function pipeline---yes, all of that
+will get faithfully passed through by D3D. The 3.0 shader profile is fairly 
+reasonable,  but 2.0 is crufty and the various 1.x
 shader versions are seriously weird---remember 1.3 pixel shaders? Or, for that
-matter, the fixed-function vertex pipeline with vertex lighting and such? Yeah,
-support for all that's still there in D3D and the guts of every modern graphics
-driver, though of course they just translate it to newer shader versions by now
-(and have been doing so for quite some time).
+matter, the fixed-function vertex pipeline with vertex lighting and such?  
+Support for all that's still there in D3D and the guts of every modern graphics
+driver, though of course everything just gets translated into regular shader 
+code at this point.
 
 Then there's things like memory management. The UMD will get things like
-texture creation commands and need to provide space for them. Actually, the UMD
-just suballocates some larger memory blocks it gets from the KMD (Kernel-Mode
-Driver); actually mapping and unmapping pages (and managing which part of video
-memory the UMD can see, and conversely which parts of system memory the GPU may
-access) is a kernel-mode privilege and can't be done by the UMD.
+texture creation commands and need to provide space for them. Now, the UMD does 
+not actually own or directly manage video memory; the OS manages video memory 
+and the KMD (Kernel-Mode Driver) is responsible for whatever magic is necessary 
+to actually allocate memory in the Aperture (a system-memory region accessible 
+to the graphics card) or in Video Memory. But it is the UMD that needs to 
+initiate such allocation requests, and since they're not cheap, it might also 
+decide to bundle small resources into larger memory blocks and suballocate from 
+them.
 
-But the UMD can swizzle textures, for example - that is, go from linear pixel
-layout to something that's more likely to get good cache hit rates during 3D
-rendering; we'll see this later. Some GPUs can also do the swizzling
-themselves, during a 2D blit or copy. The UMD can also schedule transfers
-between system memory and (mapped) video memory and the like. Most importantly,
-it can also write command buffers (or ``DMA buffers'' - I'll be using these two
-names interchangeably) once the KMD has allocated them and handed them over. A
-command buffer contains, well, commands :). All your state-changing and drawing
-operations will be converted by the UMD into commands that the hardware
-understands. As will a lot of things you don't trigger manually - such as
-uploading textures and shaders to video memory.
+The UMD can, however, write command buffers.\footnote{In the original (blog)
+version of this text, I used the terms ``command buffer'' and ``DMA buffer''
+interchangably; this version goes into more detail on WDDM, where the two names 
+refer to separate concepts, so I'll have to be more precise with the 
+terminology; apologies for any confusion this might cause.} A command buffer 
+contains rendering commands in whatever format the hardware understands. The 
+UMD will convert all the state-changing and rendering commands received from 
+the API into this form, and also insert some new ones that are requisite glue 
+(for example, shaders might need to be uploaded into a special memory area 
+before they can be used for the first time).
+
+There's a problem here, though; as I mentioned, the UMD does not actually 
+``own'' the graphics card, nor does it get to manage video memory. So while the 
+UMD is putting together the command buffer, it does not actually know where 
+textures, vertex buffers etc.\@ will be in memory by the time the graphics card 
+gets to see the commands. So it can't put the right offsets in just yet;
+instead, each command buffer comes with an associated ``allocation list'' that 
+lists all blocks of memory that need to be in memory for the command buffer to 
+run and a ``patch list'' that gives the locations in the command buffer where 
+their eventual addresses have to be written to. These patches are applied later 
+by the KMD.
 
 In general, drivers will try to put as much of the actual processing into the
 UMD as possible; the UMD is user-mode code, so anything that runs in it doesn't
-need any costly kernel-mode transitions, it can freely allocate memory, farm
-work out to multiple threads, and so on - it's just a regular DLL (even though
-it's loaded by the API, not directly by your app). This has advantages for
-driver development too - if the UMD crashes, the app crashes with it, but not
-the whole system; it can just be replaced while the system is running (it's
+need any costly kernel-mode transitions, it can freely allocate system memory, 
+farm work out to multiple threads, and so on: it's just a regular DLL (even 
+though it's loaded by the API, not directly by the app). This has advantages 
+for
+driver development too: if the UMD crashes, the app might crash with it, but 
+not the whole system; it can just be replaced while the system is running (it's
 just a DLL!); it can be debugged with a regular debugger; and so on. So it's
 not only efficient, it's also convenient.
 
-But there's a big elephant in the room that I haven't mentioned yet.
+However, there's a problem: there's one UMD instance per app that uses the 3D 
+pipeline, but all of them are trying to access a single shared resource, the 
+GPU (even in a dual-GPU configuration, only one of them is actually the main 
+display).  In a multi-tasking OS, there's two possible solutions to this 
+problem.  Either make sure to only grant exclusive access to the GPU to one app 
+at a time (this was how D3D fullscreen mode originally worked), or introduce 
+some layer that arbitrates access to the GPU and hands all processes their 
+time-slices.  And since by now even regular window management uses 3D 
+functionality for rendering, the exclusive model isn't workable anymore. So we 
+need something that acts as the gatekeeper for access to the GPU. In the case 
+of WDDM, that something is the DirectX graphics kernel subsystem (aka 
+\code{Dxgkrnl.sys}), an OS component which contains---among other things---the 
+GPU scheduler and the video memory manager.
 
-\subsection*{Did I say ``user-mode driver''? I meant ``user-mode drivers.''}
+\section{GPU scheduler and Video Memory Manager}
 
-As said, the UMD is just a DLL. Okay, one that happens to have the blessing of
-D3D and a direct pipe to the KMD, but it's still a regular DLL, and in runs in
-the address space of its calling process.
+The GPU scheduler is exactly that: it arbitrates access to the 3D pipeline 
+using time-slicing, the same way that threads are multiplexed onto a (usually 
+much smaller) number of logical processors. A context switch incurs, at the 
+very least, some state switching on the GPU (which requires extra commands).  
+And of course, different apps likely use very different sets of resources, so 
+things might need to get swapped into (or out of) video memory. At any given 
+point in time, only one process actually has its command buffers forwarded to 
+the KMD; the remaining command buffers just get queued up.
 
-But we're using multi-tasking OSes nowadays. In fact, we have been for some
-time.
+Except it's not actually command buffers (in WDDM lingo) that get sent to the 
+GPU at all; WDDM calls the buffer that actually get sent to the hardware ``DMA 
+buffers''. The UMD calls the ``Render'' entry point with a command buffer, 
+allocation list and patch list; all this eventually gets forwarded to the KMD, 
+which has to validate that command buffer and turn it into 
+a (hardware-executable) DMA buffer with a new allocation list and patch list.  
+In theory, because there's this translation step, command buffers could be 
+completely different from hardware DMA buffers; but in practice it's far more 
+efficient (and also simpler) to keep the two very similar, if not identical.
 
-This "GPU" thing I keep talking about? That's a shared resource. There's only
-one that drives your main display (even if you use SLI/Crossfire). Yet we have
-multiple apps that try to access it (and pretend they're the only ones doing
-it). This doesn't just work automatically; back in The Olden Days, the solution
-was to only give 3D to one app at a time, and while that app was active, all
-others wouldn't have access. But that doesn't really cut it if you're trying to
-have your windowing system use the GPU for rendering. Which is why you need
-some component that arbitrates access to the GPU and allocates time-slices and
-such.
+But before the DMA buffer can actually be submitted, the scheduler needs to 
+ensure that all required resources are available. If everything mentioned in 
+the allocation list is already in video memory, the DMA buffer is good to go.  
+If not, however, the allocation list is sent to the video memory manager first.
 
-\section{The scheduler}
+The video memory manager keeps track of the current contents of video memory.  
+When presented with an allocation list, it has to figure out how to get all 
+resources into GPU-accessible memory (either video memory or the Aperture).  
+This will involve some uploads from system to video memory, but some resources 
+that aren't used for a given DMA buffer might also get moved from video memory 
+back to system memory. Or resource might be shuffled around in video memory 
+(defragmented) to make sure there's a large enough hole for a large resource.  
+Finally, the video memory manager might also find out that there's just no way 
+to fit all allocations required by a given DMA buffer into memory at once, and 
+request that it be split into several smaller pieces.\footnote{To facilitate 
+DMA buffer splitting, patch lists contain not just a patch locations, but also 
+split locations so the video memory manager can determine split points without 
+being able to read the (hardware-dependent) DMA buffer format.} If all went 
+well, the video memory manager ends up with a list of resource movement 
+commands: copy texture A from system memory to video memory, move vertex buffer 
+B in video memory to compact free space, and so forth. It then calls a special 
+KMD entry point to turn these commands into hardware-consumable DMA buffers 
+that perform memory transfer operations (so-called ``paging buffers'').  
+A rendering DMA buffer might take no paging buffers at all (if everything is 
+already in GPU-accessible memory), or it might need several.
 
-This is a system component, part of the OS - note the ``the'' is somewhat
-misleading; I'm talking about the graphics scheduler here, not the CPU or IO
-schedulers. This does exactly what you think it does - it arbitrates access to
-the 3D pipeline by time-slicing it between different apps that want to use it.
-A context switch incurs, at the very least, some state switching on the GPU
-(which generates extra commands for the command buffer) and possibly also
-swapping some resources in and out of video memory.  And of course only one
-process gets to actually submit commands to the 3D pipe at any given time.
+Either way, after the video memory manager is done, the final locations for all 
+resources are known, so the scheduler calls the KMD to patch the right offsets 
+into the DMA buffer. And then, finally, the DMA buffers are actually ready to 
+be submitted to the GPU: first the paging buffers, then the rendering command 
+buffer. If the buffer was split, this page-then-render sequence is repeated 
+several times. The KMD will then actually submit the DMA buffer to the GPU.
 
-You'll often find console programmers complaining about the fairly high-level,
-hands-off nature of PC 3D APIs, and the performance cost this incurs. But the
-thing is that 3D APIs/drivers on PC really have a more complex problem to solve
-than console games - they really do need to keep track of the full current
-state for example, since someone may pull the metaphorical rug from under them
-at any moment! They also work around broken apps and try to fix performance
-problems behind their backs; this is a rather annoying practice that no-one's
-happy with, certainly including the driver authors themselves, but the fact is
-that the business perspective wins here; people expect stuff that runs to
-continue running (and doing so smoothly). You just won't win any friends by
-yelling ``BUT IT'S WRONG!'' at the app and then sulking and going through an
-ultra-slow path.
-
-Anyway, on with the pipeline. Next stop: Kernel mode!
+In the other direction, once the GPU is finished with a DMA buffer, it's 
+supposed to report back to the driver, which in turn pings the graphics kernel 
+subsystem. The video memory manager needs this information to know when it's 
+safe to actually free/recycle memory (dynamic vertex buffers, for example); 
+allocations can't be freed or reused while the GPU might still reference them!
  
 \section{The Kernel-Mode Driver (KMD)}
 
-This is the part that actually deals with the hardware. There may be multiple
+This is the component that actually deals with the hardware (WDDM-speak for 
+this is ``Display miniport driver'', by the way, but I prefer KMD).  There may 
+be multiple
 UMD instances running at any one time, but there's only ever one KMD, and if
-that crashes, then boom you're dead - used to be "blue screen" dead, but by now
-Windows actually knows how to kill a crashed driver and reload it (progress!).
-As long as it happens to be just a crash and not some kernel memory corruption
-at least - if that happens, all bets are off.
+that crashes, the graphics subsystem is in trouble; it used to be ``blue 
+screen''-magnitude trouble, but starting with WDDM, Windows actually knows how 
+to kill a crashed driver and reload it---progress! But since the video memory 
+manager tries to keep resources in video memory (which might've been partially 
+overwritten by the GPU reset that typically happens during KMD initialization), 
+apps still need to re-create everything that wasn't cached in system memory.  
+And of course, if the KMD didn't just crash, but went on scribbling all over 
+kernel memory, all bets are off.
 
-The KMD deals with all the things that are just there once. There's only one
-GPU memory, even though there's multiple apps fighting over it. Someone needs
-to call the shots and actually allocate (and map) physical memory. Similarly,
-someone must initialize the GPU at startup, set display modes (and get mode
-information from displays), manage the hardware mouse cursor, program the HW
-watchdog timer so the GPU gets reset if it stays unresponsive for a certain
-time, respond to interrupts, and so on. This is what the KMD does.
+From the discussion above, we know a lot of things that the KMD does by now: it 
+handles resource allocation requests from the UMD (but not their physical 
+placement, which is done by the Video Memory Manager). It can render command 
+buffers into DMA buffers, build paging buffers, patch DMA buffers, and submit 
+them to the GPU. It hands a list of different memory types (and their physical 
+memory locations) to the video memory manager, and tells it what things can (or 
+should) go where. It also keeps track of different contexts, which contain 
+state information; this is necessary so the correct state can be restored on 
+a context switch.
 
-There's also this whole content protection/DRM bit about setting up a
-protected/DRM'ed path between a video player and the GPU so no the actual
-precious decoded video pixels aren't visible to any dirty user-mode code that
-might do awful forbidden things like dump them to disk (...whatever). The KMD
-has some involvement in that too.
+There's also a lot of things we haven't seen yet. There's functions related to 
+video mode switching, page flipping, the hardware mouse cursor, power-saving 
+functionality, the hardware watchdog timer (resets the GPU if it doesn't 
+respond within a set time interval), deal with hardware interrupts, and so 
+forth.  There's some functions that deal with swizzling ranges; we'll see 
+texture swizzling later in section~\ref{sec:tex:swizzle}. And of course there's 
+video overlays, which are special because they go through the DRM-infested 
+``protected media path'', to ensure that say a Blu-Ray player can push its 
+precious decoded video pixels to the GPU without other user-mode processes 
+getting their hands on the decompressed, decrypted data.
 
-Most importantly for us, the KMD manages the \emph{actual} command buffer.  You
-know, the one that the hardware actually consumes. The command buffers that the
-UMD produces aren't the real deal --- as a matter of fact, they're just random
-slices of GPU-addressable memory. What actually happens with them is that the
-UMD finishes them, submits them to the scheduler, which then waits until that
-process is up and then passes the UMD command buffer on to the KMD.  The KMD
-then writes a call to command buffer into the main command buffer, and
-depending on whether the GPU command processor can read from main memory or
-not, it may also need to DMA it to video memory first. The main command buffer
-is usually a (quite small) ring buffer --- the only thing that ever gets
-written there is system/initialization commands and calls to the ``real'',
-meaty 3D command buffers.
-
-But this is still just a buffer in memory right now. Its position is known to
-the graphics card --- there's usually a read pointer, which is where the GPU is
-in the main command buffer, and a write pointer, which is how far the KMD has
-written the buffer yet (or more precisely, how far it has \emph{told} the GPU
-it has written yet). These are hardware registers, and they are memory-mapped
---- the KMD updates them periodically, usually whenever it submits a new chunk
-of work. How memory transfers to and from the GPU work will be explained in
-chapter~\ref{ch:memory}.
+But back to our DMA buffers: what does the KMD do with them once they've been 
+submitted? The answer is one we'll be seeing a lot through this text: put them 
+in another buffer. Or, more precisely, put their addresses into a buffer.  
+Another DMA buffer, to be precise, though this one is usually quite small and 
+a ring buffer. Instead of rendering commands, the ring buffer just contains 
+calls into the actual DMA buffers we just prepared. It's still just a buffer in 
+(GPU-accessible) memory, though, and for anything to happen, the GPU must be 
+told about it. There's usually two (GPU) hardware registers in play here: one 
+is a read pointer, which is the current read position on the GPU side (this is 
+how far it has consumed commands so far), and the other one is the write 
+pointer, which is the location up to which the KMD has written commands to the 
+ring buffer. Whenever the GPU is done with a DMA buffer, it'll return to look 
+at the main ring buffer. If its current read pointer is different from the 
+write pointer, there's more commands to process; if not, there's been no new 
+DMA buffers submitted in the meantime, so the GPU will be idle for a while 
+(until the write pointer changes). Communication with the GPU will be explained 
+in more detail in chapter~\ref{ch:memory}.
 
 \section{Aside: OpenGL and other platforms}
 
@@ -218,10 +287,12 @@ a distinction between the API and UMD layer. And unlike D3D, the (GLSL) shader
 compilation is not handled by the API at all, it's all done by the driver. An
 unfortunate side effect is that there are as many GLSL frontends as there are
 3D hardware vendors, all of them basically implementing the same spec, but with
-their own bugs and idiosyncrasies. Not fun. And it also means that the drivers
+their own bugs and idiosyncrasies---everyone who's ever shipped a product using 
+GL knows how much pain that causes to app authors. And it also means that the 
+drivers
 have to do all the optimizations themselves whenever they get to see the
-shaders - including expensive optimizations. The D3D bytecode format is really
-a cleaner solution for this problem - there's only one compiler (so no slightly
+shaders---including expensive optimizations. The D3D bytecode format is really
+a cleaner solution for this problem: there's only one compiler (so no slightly
 incompatible dialects between different vendors!) and it allows for some
 costlier data-flow analysis than you would normally do.
 
@@ -232,8 +303,10 @@ that space is fairly similar to the D3D model.
 
 \section{Further Reading}
 
-This is just a very coarse overview of the WDDM graphics stack, meant to give
-you a general idea of what fits where. For details, refer to the official WDDM
-documentation~\citep{wddm}.
+This section is just a coarse overview of the D3D10+/WDDM graphics stack; other 
+implementations work somewhat differently, although the basic entities (driver, 
+API, video memory manager, scheduler, command/DMA buffer dispatch) exist 
+everywhere in some form or another. More details can be found, for example, in 
+the official WDDM documentation~\citep{wddm}.
 
 \bibliography{sw_stack}{}
